--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,17 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="src_design_patterns"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/kettle"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/jdbcDrivers"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="lib/db2java.jar"/>
+	<classpathentry kind="lib" path="lib/db2jcc_license_cu.jar"/>
+	<classpathentry kind="lib" path="lib/db2jcc.jar"/>
+	<classpathentry kind="lib" path="lib/kettle-core-9.0.0.0-423.jar"/>
+	<classpathentry kind="lib" path="lib/kettle-engine-9.0.0.0-423.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.31.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
